--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+.message-box::-webkit-scrollbar{
+    display: none;
+}
+.file-slider::-webkit-scrollbar{
+    display: none;
+}
